--- a/ldp.html
+++ b/ldp.html
@@ -21,7 +21,7 @@
                 <div class="student">
                     <div class="student-card">
                         <div class="student-card-img">
-                        <a href="venus-page.html" target="_blank"> <img class="student-img" src="https://github.com/Venus-AD/BSIT-TSM-3B-IPT2CS-G5/blob/main/venus-pic-removebg-preview.png?raw=true" alt="venus"> </a>
+                        <a href="./Venus-folder/venus-page.html" target="_blank"> <img class="student-img" src="https://github.com/Venus-AD/BSIT-TSM-3B-IPT2CS-G5/blob/main/venus-pic-removebg-preview.png?raw=true" alt="venus"> </a>
                         </div>
                         <div class="category"><strong>Venus, Angel Dave S.</strong></div>
                         <h3>Who am I?</h3>
