--- a/ldp.html
+++ b/ldp.html
@@ -58,7 +58,7 @@
                         <div class="student">
                             <div class="student-card">
                                 <div class="student-card-img">
-                                    <a href="" target="_blank"><img class="student-img" src="https://github.com/Venus-AD/BSIT-TSM-3B-IPT2CS-G5/blob/main/france-pic-removebg-preview.png?raw=true" alt=""></a>
+                                    <a href="./France-Folder/html.html" target="_blank"><img class="student-img" src="https://github.com/Venus-AD/BSIT-TSM-3B-IPT2CS-G5/blob/main/france-pic-removebg-preview.png?raw=true" alt=""></a>
                                 </div>
                                 <div class="category"><strong>Pineda, France Marcus S.</strong></div>
                                 <h3>Who am I?</h3>
@@ -93,7 +93,7 @@
                                 <div class="student">
                                     <div class="student-card">
                                         <div class="student-card-img">
-                                            <a href="portfolio.html" target="_blank"><img class="student-img-2" src="https://github.com/Venus-AD/BSIT-TSM-3B-IPT2CS-G5/blob/main/jam-pic-removebg-preview.png?raw=true" alt=""></a>
+                                            <a href="./juan-folder/portfolio.html" target="_blank"><img class="student-img-2" src="https://github.com/Venus-AD/BSIT-TSM-3B-IPT2CS-G5/blob/main/jam-pic-removebg-preview.png?raw=true" alt=""></a>
                                         </div>
                                         <div class="category"><strong>David, Juan Antonio M.</strong></div>
                                         <h3>Who am I?</h3>
