--- a/France-Folder/html.html
+++ b/France-Folder/html.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title> Portfolio </title>
-  <link rel="stylesheet" type="text/css" href="portfolio.ccs">
+  <link rel="stylesheet" type="text/css" href="ccs.css">
 </head>
 <body>
   <header>
