link somera to the landing page

--- a/ldp.html
+++ b/ldp.html
@@ -39,7 +39,7 @@
                     <div class="student">
                         <div class="student-card">
                             <div class="student-card-img">
-                               <a href="" target="_blank"><img class="student-img-2" src="https://github.com/Venus-AD/BSIT-TSM-3B-IPT2CS-G5/blob/main/somera.png?raw=true" alt="somera"></a> 
+                               <a href="./Somera-folder/Somera.html" target="_blank"><img class="student-img-2" src="https://github.com/Venus-AD/BSIT-TSM-3B-IPT2CS-G5/blob/main/somera.png?raw=true" alt="somera"></a> 
                             </div>
                             <div class="category"><strong>Somera, kyle kenneth</strong></div>
                             <h3>Who am I?</h3>
