link baawa to landing page

--- a/ldp.html
+++ b/ldp.html
@@ -76,7 +76,7 @@
                             <div class="student">
                                 <div class="student-card">
                                     <div class="student-card-img">
-                                        <a href="" target="_blank"><img class="student-img" src="https://github.com/Venus-AD/BSIT-TSM-3B-IPT2CS-G5/blob/main/jendel-pic-removebg-preview.png?raw=true" alt=""></a>
+                                        <a href="./baawaa/porfolio.html" target="_blank"><img class="student-img" src="https://github.com/Venus-AD/BSIT-TSM-3B-IPT2CS-G5/blob/main/jendel-pic-removebg-preview.png?raw=true" alt=""></a>
                                     </div>
                                     <div class="category"><strong>Baawa, Jendel</strong></div>
                                     <h3>Who am I?</h3>
