--- a/ldp.html
+++ b/ldp.html
@@ -4,13 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BSIT-TSM-3B-IPTCS-G5-LANDING-PAGE.</title>
-
-    <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        .news-article { margin-bottom: 20px; }
-        .news-article h2 { margin: 0; }
-        .news-article p { margin: 5px 0; }
-      </style>
 </head>
     <!-- Css Link -->
     <link rel="stylesheet" href="ldp.css">
@@ -23,10 +16,12 @@
         </div>
     </header>
     <main>
-        <h1>Latest News</h1>
-  <div id="news-container">Loading news...</div>
+        <div class="joke">
+        <h1>Random Joke</h1>
+        <button id="new-joke-button">Click For New Jokes</button>
+  <div id="joke"></div>
   <script src="app.js"></script>
-
+        </div>
         <section id="students">
             <div class="student-con">
                 <div class="student">
